Add a description on each demo